add freeze to main

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,9 @@
 project:
   type: website
 
+execute:
+  freeze: auto  # re-render only when source changes
+
 website:
   title: "Statistics and Methodology - Validation Platform"
   page-footer: CC-BY SCTO Statistics and Methodology
