--- a/.github/workflows/publish_quarto.yaml
+++ b/.github/workflows/publish_quarto.yaml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          version: 1.7.34
 
       - name: Install R
         uses: r-lib/actions/setup-r@v2
